Add Style to score div

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Poppins', sans-serif;
+  background-color: #f28766;
 }
 
 li {
@@ -19,12 +20,13 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 60%;
+  width: 80%;
 }
 
 .main-title {
   font-weight: 500;
   font-size: 45px;
+  color: #363c48;
 }
 
 .scroll {
@@ -36,23 +38,67 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: rgba(177, 172, 172, 0.13);
 }
 
 .header-score {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #363c48;
+  padding: 0 10px;
+  border-radius: 10px;
+}
+
+.header-icon {
+  color: #f26856;
+  padding-left: 20px;
+  font-size: 35px;
 }
 
 .recent-score {
   font-weight: 500;
-  font-size: 25px;
+  font-size: 22px;
   margin-right: 20px;
+  color: #fff;
 }
 
 .refresh-btn {
   margin-left: 10px;
+}
+
+.score {
+  background-color: #f28a65;
+  width: 50%;
+}
+
+.user-img {
+  width: 40px;
+  height: 40px;
+}
+
+.user-img img {
+  width: 100%;
+}
+
+.users {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #fa6855;
+  line-height: 30px;
+  color: #fff;
+}
+
+.users:nth-child(2n) {
+  background-color: #e0574f;
+}
+
+.score-name {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  padding-left: 40px;
 }
 
 .refresh {
@@ -60,22 +106,24 @@ main {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  border: 2px solid rgb(54, 54, 54);
+  border-radius: 10px;
+  border: none;
+  background-color: #f28766;
+  color: #fff;
   width: 120px;
   height: 40px;
-  box-shadow: 1px 2px 4px black;
+  box-shadow: 1px 2px 4px #363c48;
 }
 
 .result-ul {
-  border: 2px solid black;
-}
-
-.result-li {
-  padding: 5px 10px;
+  border: 3px solid #363c48;
+  border-radius: 10px;
 }
 
 .form-div {
-  margin-top: -150px;
+  background-color: #f28267;
+  width: 40%;
+  padding: 20px;
 }
 
 .form input {
@@ -84,10 +132,19 @@ main {
   background-color: transparent;
   border: none;
   font-size: 18px;
+  padding-left: 10px;
+}
+
+.form input::placeholder {
+  color: #fff;
 }
 
 .form-inputs {
-  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  border: 2px solid #363c48;
+  border-radius: 10px;
+  height: 40px;
   margin-bottom: 30px;
 }
 
