--- a/src/style.css
+++ b/src/style.css
@@ -242,7 +242,7 @@ footer {
   }
 
   .header-score {
-    margin: 10px;
+    margin: 0 -6px;
     flex-wrap: wrap;
     padding-bottom: 10px;
   }
@@ -252,8 +252,16 @@ footer {
     justify-content: flex-end;
   }
 
+  .result-ul {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+
   .score {
+    margin-left: -15px;
+    margin-right: -15px;
     margin-top: 10px;
+    width: 91%;
   }
 
   .refresh {
@@ -272,6 +280,10 @@ footer {
 
   .score-name {
     padding-left: 10px;
+  }
+
+  .form-div {
+    width: 91%;
   }
 
   .main-title {
